k8s/zero-cache/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zero-cache
  labels:
    app: zero-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zero-cache
  template:
    metadata:
      labels:
        app: zero-cache
    spec:
      containers:
        - name: zero-cache
          image: rocicorp/zero:latest
          ports:
            - containerPort: 4848
              name: zero-cache-svc
          env:
            - name: ZERO_REPLICA_FILE
              valueFrom:
                secretKeyRef:
                  name: zero-secret
                  key: zeroReplicaFile
            - name: ZERO_UPSTREAM_DB
              valueFrom:
                secretKeyRef:
                  name: zero-secret
                  key: zeroUpstreamDb
            - name: ZERO_CVR_DB
              valueFrom:
                secretKeyRef:
                  name: zero-secret
                  key: zeroCvrDb
            - name: ZERO_CHANGE_DB
              valueFrom:
                secretKeyRef:
                  name: zero-secret
                  key: zeroChangeDb
            - name: ZERO_APP_PUBLICATIONS
              valueFrom:
                secretKeyRef:
                  name: zero-secret
                  key: zeroAppPublications
            - name: ZERO_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: zero-secret
                  key: zeroAdminPassword
            - name: ZERO_AUTH_JWKS_URL
              value: http://localhost:15010/openid/v1/jwks
            - name: NODE_EXTRA_CA_CERTS
              value: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
          volumeMounts:
            - name: zero-cache-pvc
              mountPath: /data

        - name: envoy
          image: envoyproxy/envoy:v1.34-latest
          args: ["-c", "/etc/envoy/envoy.yaml"]
          ports:
            - containerPort: 15010
          volumeMounts:
            - name: zero-cache-envoy-config-volume
              mountPath: /etc/envoy

      serviceAccountName: zero-cache
      volumes:
        - name: zero-cache-envoy-config-volume
          configMap:
            name: zero-cache-envoy-config

  volumeClaimTemplates:
    - metadata:
        name: zero-cache-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        storageClassName: do-block-storage
---
apiVersion: v1
kind: Service
metadata:
  name: zero-cache-service
  labels:
    app: zero-cache
spec:
  ports:
    - name: zero-cache-svc
      protocol: TCP
      port: 4848
      targetPort: zero-cache-svc
  selector:
    app: zero-cache
